--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,8 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/game.cpp
                 ./client_src/graphics/view.cpp
                 ./client_src/graphics/whorms.cpp
+                ./client_src/graphics/path_loader.cpp
+                ./client_src/graphics/texture_manager.cpp
                 ./common_src/common_liberror.cpp
                 ./common_src/common_resolver.cpp 
                 ./common_src/common_resolvererror.cpp 
