Implementado explosiones y municion - Ahora los proyectiles explotan. - Tambien se renderiza la cantidad de municion de las armas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/graphics/whorms.cpp
                 ./client_src/graphics/path_loader.cpp
                 ./client_src/graphics/texture_manager.cpp
+                ./client_src/graphics/explotion.cpp
                 ./common_src/common_liberror.cpp
                 ./common_src/common_resolver.cpp 
                 ./common_src/common_resolvererror.cpp 
@@ -167,6 +168,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/worm/weapon/worm_mortar.cpp
                 ./client_src/worm/weapon/worm_grenade.cpp
                 ./client_src/worm/weapon/crosshair.cpp
+                ./client_src/graphics/explotion.cpp
  
     ${UIS_HEADERS}
 )
