--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(Qt5Widgets CONFIG REQUIRED)
 include_directories(${PROJECT_SOURCE_DIR}/client_src/graphics_lobby)
 qt5_wrap_ui(UIS_HEADERS
             ./graphics_lobby/mainwindow.ui
+            ./graphics_lobby/createpopup.ui
+         
          )
 # Instruct CMake to run moc automatically when neededcd
 set(CMAKE_AUTOMOC ON)
@@ -114,6 +116,9 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./graphics_lobby/mainwindow.cpp
 	            ./graphics_lobby/assets/resources.qrc
                 ./client_src/client_lobby.cpp
+                ./graphics_lobby/assets/resources.qrc
+                ./graphics_lobby/createpopup.cpp
+                ./client_src/client_lobby.cpp
                 ${UIS_HEADERS}
 
          
@@ -169,6 +174,9 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/worm/weapon/worm_grenade.cpp
                 ./client_src/worm/weapon/crosshair.cpp
                 ./client_src/graphics/explotion.cpp
+                ./graphics_lobby/assets/resources.qrc
+                ./graphics_lobby/createpopup.cpp
+                ./client_src/client_lobby.cpp
  
     ${UIS_HEADERS}
 )
