--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories(${PROJECT_SOURCE_DIR}/client_src/graphics_lobby)
 qt5_wrap_ui(UIS_HEADERS
             ./graphics_lobby/mainwindow.ui
             ./graphics_lobby/createpopup.ui
+            ./graphics_lobby/joinpopup.ui
          
          )
 # Instruct CMake to run moc automatically when neededcd
@@ -118,6 +119,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/client_lobby.cpp
                 ./graphics_lobby/assets/resources.qrc
                 ./graphics_lobby/createpopup.cpp
+                ./graphics_lobby/joinpopup.cpp
                 ./client_src/client_lobby.cpp
                 ${UIS_HEADERS}
 
@@ -176,6 +178,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/graphics/explotion.cpp
                 ./graphics_lobby/assets/resources.qrc
                 ./graphics_lobby/createpopup.cpp
+                ./graphics_lobby/joinpopup.cpp
                 ./client_src/client_lobby.cpp
  
     ${UIS_HEADERS}
