--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/DTO/common_objetoDTO.cpp
                 ./client_src/DTO/common_escenarioDTO.cpp
                 ./client_src/DTO/common_paqueteDTO.cpp
+                ./client_src/DTO/common_provisionDTO.cpp
                 ./client_src/DTO/common_turnoDTO.cpp
                 ./client_src/DTO/common_segundosDTO.cpp
                 ./client_src/DTO/common_armaDTO.cpp
@@ -167,6 +168,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/DTO/common_jugadorDTO.cpp
                 ./client_src/DTO/common_objetoDTO.cpp
                 ./client_src/DTO/common_escenarioDTO.cpp
+                ./client_src/DTO/common_provisionDTO.cpp
                 ./client_src/DTO/common_paqueteDTO.cpp
                 ./client_src/DTO/common_turnoDTO.cpp
                 ./client_src/DTO/common_segundosDTO.cpp
