--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ qt5_wrap_ui(UIS_HEADERS
             ./graphics_lobby/mainwindow.ui
             ./graphics_lobby/createpopup.ui
             ./graphics_lobby/joinpopup.ui
+            ./graphics_lobby/waitRoom.ui
          
          )
 # Instruct CMake to run moc automatically when neededcd
@@ -136,6 +137,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./graphics_lobby/assets/resources.qrc
                 ./graphics_lobby/createpopup.cpp
                 ./graphics_lobby/joinpopup.cpp
+                ./graphics_lobby/waitRoom.cpp
                 ./client_src/client_lobby.cpp
                 ${UIS_HEADERS}
 
@@ -196,6 +198,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./graphics_lobby/assets/resources.qrc
                 ./graphics_lobby/createpopup.cpp
                 ./graphics_lobby/joinpopup.cpp
+                ./graphics_lobby/waitRoom.cpp
                 ./client_src/client_lobby.cpp
  
     ${UIS_HEADERS}
