--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/DTO/common_segundosDTO.cpp
                 ./client_src/DTO/common_armaDTO.cpp
                 ./client_src/DTO/common_vientoDTO.cpp
+                ./client_src/DTO/common_ganadorDTO.cpp
                 ./client_src/worm/worm_walk.cpp
                 ./client_src/worm/worm_idle.cpp
                 ./client_src/worm/weapon/worm_airstrike.cpp
@@ -186,6 +187,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./client_src/DTO/common_segundosDTO.cpp
                 ./client_src/DTO/common_armaDTO.cpp
                 ./client_src/DTO/common_vientoDTO.cpp
+                ./client_src/DTO/common_ganadorDTO.cpp
                 ./client_src/worm/worm_walk.cpp
                 ./client_src/worm/worm_idle.cpp
                 ./client_src/worm/weapon/worm_airstrike.cpp
