--- a/mapas/mapa_principal.yaml
+++ b/mapas/mapa_principal.yaml
@@ -1,17 +1,7 @@
 fondo:
   pantalla: 1
-spawns_automaticos: 0
-spawns_mapa:
-  - x: 57
-    y: 138
-  - x: 301
-    y: 70
-  - x: 565
-    y: 84
-  - x: 448
-    y: 118
-  - x: 211
-    y: 132
+spawns_automaticos: 1
+spawns_mapa: ~
 vigas:
   - tipo: 1
     x: 70
