--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CMAKE_AUTORCC ON)
 
 
 add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
+add_definitions(-DMAPA_PATH="${PROJECT_SOURCE_DIR}/mapas")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -pedantic-errors -O0 -ggdb -DDEBUG -fno-inline -D _POSIX_C_SOURCE=200809L -pthread")
 
@@ -49,6 +50,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/libs/box2d-2.4.0 ${CMAKE_SOURCE_DIR}/build/
                 ./graphics_editor/createpopup.cpp
                 ./graphics_editor/joinpopup.cpp
                 ./client_src/client_editor.cpp
+                ./client_src/configuracion_mapa.cpp
   
                 ${UIS_HEADERS}
 
