--- a/Editor/mapas/Nombre del mapa.yaml
+++ b/Editor/mapas/Nombre del mapa.yaml
@@ -1,25 +1,23 @@
 fondo:
   pantalla: 1
 spawns_automaticos: 0
-spawns_mapa: ~
+spawns_mapa:
+  - x: 147
+    y: 127
+  - x: 242
+    y: 127
+  - x: 347
+    y: 126
+  - x: 465
+    y: 90
+  - x: 283
+    y: 55
 vigas:
   - tipo: 1
-    x: 332
-    y: 142
+    x: 101
+    y: 67
     angulo: 45
   - tipo: 1
-    x: 127
-    y: 133
+    x: 180
+    y: 63
     angulo: 45
-  - tipo: 1
-    x: 65
-    y: 67
-    angulo: -45
-  - tipo: 1
-    x: 204
-    y: 67
-    angulo: -45
-  - tipo: 1
-    x: 465
-    y: 88
-    angulo: -45
