--- a/mapas/Nombre del mapa.yaml
+++ b/mapas/Nombre del mapa.yaml
@@ -1,25 +1,27 @@
 fondo:
-  pantalla: 1
+  pantalla: 2
 spawns_automaticos: 0
-spawns_mapa: ~
+spawns_mapa:
+  - x: 167
+    y: 96
+  - x: 271
+    y: 117
+  - x: 189
+    y: 155
+  - x: 398
+    y: 166
+  - x: 328
+    y: 166
 vigas:
   - tipo: 1
-    x: 332
-    y: 142
+    x: 235
+    y: 21
     angulo: 45
   - tipo: 1
-    x: 127
-    y: 133
+    x: 330
+    y: 16
     angulo: 45
   - tipo: 1
-    x: 65
-    y: 67
-    angulo: -45
-  - tipo: 1
-    x: 204
-    y: 67
-    angulo: -45
-  - tipo: 1
-    x: 465
-    y: 88
-    angulo: -45
+    x: 419
+    y: 5
+    angulo: 45
