--- a/mapas/Nombre del mapa.yaml
+++ b/mapas/Nombre del mapa.yaml
@@ -1,27 +1,57 @@
 fondo:
   pantalla: 2
-spawns_automaticos: 0
-spawns_mapa:
-  - x: 167
-    y: 96
-  - x: 271
-    y: 117
-  - x: 189
-    y: 155
-  - x: 398
-    y: 166
-  - x: 328
-    y: 166
+spawns_automaticos: 1
+spawns_mapa: ~
 vigas:
   - tipo: 1
-    x: 235
-    y: 21
-    angulo: 45
+    x: 43
+    y: 143
+    angulo: -45
   - tipo: 1
-    x: 330
-    y: 16
-    angulo: 45
+    x: 217
+    y: 147
+    angulo: -45
   - tipo: 1
-    x: 419
-    y: 5
-    angulo: 45
+    x: 391
+    y: 92
+    angulo: -45
+  - tipo: 1
+    x: 223
+    y: 72
+    angulo: -45
+  - tipo: 1
+    x: 406
+    y: 150
+    angulo: -45
+  - tipo: 1
+    x: 353
+    y: 122
+    angulo: -45
+  - tipo: 1
+    x: 601
+    y: 57
+    angulo: -45
+  - tipo: 1
+    x: 501
+    y: 112
+    angulo: -45
+  - tipo: 1
+    x: 513
+    y: 163
+    angulo: -45
+  - tipo: 1
+    x: 334
+    y: 171
+    angulo: -45
+  - tipo: 1
+    x: 290
+    y: 171
+    angulo: -45
+  - tipo: 1
+    x: 158
+    y: 164
+    angulo: -45
+  - tipo: 1
+    x: 120
+    y: 115
+    angulo: -45
